<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I\'ll be there</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bar_extended">BarExtended</string>
    
    <!-- 				BAR EXTENDED				 -->
    <string name="extended_title">BAR NAME</string>
    <string name="extended_open">Open:</string>
    <string name="extended_image">IMAGE</string>
    <string name="extended_addInfo">Add Info:</string>
    <string name="extended_info">INFO:</string>
    <string name="extended_address">ADDRESS</string>

</resources>