<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".BarExtended" >
    
    <TextView 
        android:id="@+id/extended_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/extended_title"/>
    
    <LinearLayout 
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="9">
        
        <TextView 
        	android:id="@+id/extended_open"
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="5"
        	android:background="#FFFFFF"
        	android:layout_margin="2dp"
        	android:text="@string/extended_open" />
        
        <LinearLayout 
            android:id="@+id/right_center_layout"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_margin="2dp"
            android:orientation="vertical" >
            
            <TextView 
        		android:id="@+id/extended_image"
        		android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:layout_weight="5"
        		android:background="#00FF00"
        		android:layout_marginBottom="2dp"
        		android:text="@string/extended_image" />
    		
            <TextView 
        		android:id="@+id/extended_addInfo"
        		android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:layout_weight="5"
        		android:background="#FFFF00"
        		android:layout_marginTop="2dp"
        		android:text="@string/extended_addInfo" />
    		
            
        </LinearLayout>
    
    	
    </LinearLayout>
    
    <TextView 
        android:id="@+id/extended_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#C0C0C0"
        android:layout_weight="5"
        android:layout_margin="2dp"
        android:text="@string/extended_info" />
    
    <TextView 
        android:id="@+id/extended_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FF00FF"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/extended_address" />

</LinearLayout>